<resources>
    <string name="app_name">Fairytales World</string>
    <string name="start_story">Start Story</string>
    <string name="settings">Settings</string>
    <string name="pilih_switch">Pilih Switch</string>
    <string name="text">Text</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="dongeng_nusantara">Dongeng Nusantara</string>
    <string name="dongeng_barat">Dongeng Barat</string>
    <string name="dongeng_islami">Dongeng Islami</string>
    <string name="cerita_1">Buaya dan Burung Penyanyi</string>
    <string name="cerita_8">Alju, si Anak Domba Putih</string>
    <string name="cerita_3">Pando Mencari Teman Berpetualang</string>
    <string name="cerita_4">Pikolo, Penyihir Periang</string>
    <string name="cerita_5">Nenek Sihir dan Tukang Roti </string>
    <string name="cerita_6">Selimut Kunang - Kunang</string>
    <string name="cerita_7">Cecil si Naga Pemalas</string>
    <string name="cerita_2">Owi, Kamu Tidak Jelek</string>
    <string name="Buaya">
        <p>\n Buaya dan Burung Penyanyi bersahabat akrab.
        Hari ini mereka asyik bercakap. Burung Penyanyi bertengger di hidung Buaya. Namun, beberapa saat kemudian, Buaya merasa mengantuk.
        Ia menguap dan membuka mulutnya lebar-lebar. Oh, Burung Penyanyi yang bertengger di hidung Buaya dan terpeleset masuk ke dalam mulut Buaya.
            Sayangnya, Buaya tidak tahu. Ia bingung mencari Burung Penyanyi yang kini tak ada lagi di hidungnya.</p>
        <br />

        <p> \n \"Aneh! Ke mana Burung Penyanyi?\" gumam Buaya.
            \"Ia pasti sedang mengajakku bercanda,\" </p>
        <br />

        <p> \n Buaya melihat ke belakang, ke ekornya.Namun, burung itu tidak ada. Buaya lalu mencari Burung Penyanyi di semak-semak.
            Ia memasukkan moncongnya ke semak-semak di tepi sungai. Namun, Burung Penyanyi tetap tidak ditemukannya.</p>
        <br />
        \n \"Ke mana ia?\" gumam Buaya kembali.

        <p>\n Buaya akhirnya memejamkan mata untuk tidur. Akan tetapi, tibatiba terdengar senandung merdu yang keluar dari dalam dirinya.</p>
        <br />

<p> \n \"Oh!\"serunya heran. Matanya terbuka lebar.
    \n \"Selama hidup, baru kali ini aku dapat bernyanyi. Wow, aku akan mengajak Burung Penyanyi sahabatku untuk bernyanyi bersama. Pasti akan sangat menyenangkan!\"</p>

<p> \n Buaya kemudian asyik mendengarkan senandung yang keluar dari dalam dirinya. Setelah beberapa lama ia merasa lelah. Ia lalu membuka mulutnya, dan menguap lebar-lebar.

Ketika akan menutup matanya, ia melihat satu makhluk bertengger di hidungnya. Makhluk itu kelihatan sangat marah. Dia si Burung Penyanyi.
        \n \"Kau jahat!\" omel burung itu.
        \n \"Mengapa kau tidak memberi tahu kalau ingin membuka mulut? Aku terjatuh ke dalam mulutmu, tahu? Menyebalkan!\"

\n Buaya mengernyitkan dahi.

\n \"Jadi,\" katanya, \"senandung yang terdengar dari dalam diriku itu suara senandungmu? Bukan senandungku?\"

\n \"Ya!\" jawab Burung Penyanyi. Ekornya digoyang-goyangkan.


\n \"Kau kan tahu, kau tidak bisa bernyanyi sama sekali! Suaramu sangat sumbang! Tak enak didengar!\"

\n Buaya sangat sedih mendengar perkataan itu. Air matanya menetes.
        \n \"Aku pikir senandung itu suaraku,\" katanya pilu. \n \"Kau tahu, aku ingin sekali bisa bernyanyi.
    Tadi kupikir aku sudah bisa menyanyi. Temyata? Oh, betapa malangnya aku yang bersuara buruk!\"</p>

        <br />

<p> \n Burung Penyanyi merasa iba. Ia segera mencari cara untuk menghibur sahabatnya itu.
        \n \"Teman, bagaimana kalau kau membuat gelembung-gelembung air dan aku bersenandung? Kita lakukan bersamaan.
        Suara yang terdengar pasti sangat enak didengar.\"

\n Buaya setuju. Ia lalu memasukkan moncongnya ke dalam air dan membuat gelembung-gelembung. Burung Penyanyi bernyanyi.
        Suara nyanyiannya sangat pas dengan suara gelembung-gelembung air yang dibuat Buaya.
        Buaya senang sekali. Sejak itu mereka berdua selalu melakukan hal itu setiap hari.
    Agar Burung Penyanyi tidak masuk lagi ke dalam mulutnya, Buaya selalu memberitahu dulu sebelum membuka mulutnya.</p>
        <br/>

        <p>\n Wow, rukun, ya, mereka!</p>

    </string>
    <string name="judul_buaya">Buaya dan Burung Penyanyi</string>
    <string name="judul_owi">Owi, Kamu Tidak Jelek</string>
    <string name="isi_owi">
        <p> \n Matahari mulai terbenam. Burung-burung hantu bangun dan bersiap untuk berburu. Owi, anak burung hantu, bertengger di dahan.</p>
        <br />
        <p> \n Tiba-tiba Han, anak burung hantu lainnya, sudah bertengger di sisinya. Burung hantu memang mampu terbang di sisinya.
            Burung hantu memang mampu terbang tanpa mengeluarkan bunyi.</p>
        <br />

<p> \n \“Owi, kita main dulu, yuk, sebelum berburu dengan ibu kita!\” ajak Han.

\n \“Aku tidak mau main denganmu. Aku mau berteman dengan Nuri, yang berbulu indah. Atau dengan Kutut, burung perkutut yang suaranya merdu!\” kata Owi.

\n \“Kamu tahu kan Han, kita ini payah. Wajah jelek, suara jelek. Orang menyebut kita burung hantu pula!\” gerutu Owi lagi.

\n \“Kata ibuku kita istimewa. Bisa menangkap mangsa dengan cepat. Penglihatan kita di malam hari juga tajam.
        Satu di antara empat jari kita punya sendi yang bisa digerakkan ke depan dan ke belakang,\” kata Han.

    \n \“Sudahlah, pokoknya kita jelek!\” kata Owi, lalu meninggalkan Han. Han Cuma bisa menggeleng-geleng. Owi memang rada aneh, pikir Han.</p>
        <br />

        <p> Owi pergi ke rumah Nuri dan mengajak Nuri bermain.</p>

\n \“Aduh, maaf ya, aku lelah setelah seharian mencari buah-buahan Aku mau tidur. Besok pagi saja, ya, mainnya!\” kata Nuri.
        <br />

\n Owi pun pamit dan menuju ke rumah Kutut. Baru saja ia bicara dengan Kutut, brrrr… brrrr… teman-teman dan keluarga Kutut semua terbang pergi.

\n \“Lo, ada apa? Kenapa semuanya pergi?\” Tanya Owi heran.

\n“Mereka takut kepadamu!\” jawab Kutut. \“Mereka, kan, belum kenal kamu!\”
        <br />

<p> Kutut ternyata juga tidak bisa main dengan Owi. Hari mulai gelap dan ia harus tidur. Besok pagi ia harus mencari makan, yaitu biji-bijian.

    Owi kembali ke pohonnya dan ikut berburu bersama ibunya. Dalam kegelapan malam, Owi melihat seekor anak katak di bawah daun pohon talas. Swiiiing… owi segera menyambarnya.</p>

<p> \n \“Kamu hebat ,Owi!\” puji ibunya.

Owi senang, tetapi ia berkata, \“Buat apa pintar berburu. Penampilan dan suara kita begitu jelek. Teman-teman Kutut sampai terbang ketakutan ketika aku datang ke tempatnya!\”
<br />
\n \“Setiap burung di ciptakan Tuhan dengan kelebihan dan kekurangan masing-masing.
        Bersyukurlah. Kedua mata kita terletak di depan, seperti mata manusia.
        Letak mata burung-burung lain, ada di kiri dan kanan kepalanya. Bukankah kita istimewa?\” kata ibu Owi.
        <br />

\n \“Aaah, Ibu sama saja dengan ibu Han. Suka memuji diri sendiri!\” kata Owi. \“Pokoknya, besok malam aku tidak mau ikut berburu. Aku mau tidur saja supaya besok pagi
    bisa bermain dengan Kutut dan Nuri!\”</p>
        <br />

<p> Besok malamnya, Owi benar-benar tak mau ikut berburu. Malam sangat sunyi.
    Sesekali terdengar suara serangga malam. Owi mencari serangga di semak-semak untuk mengisi perut.</p>

<p> \n \“Sssiiis… siiiisss…\” desis seekor ular besar. Owi terpaku melihatnya.

    \n \“Owi, cepat terbang ke sini!\” terdengar suara Han. Dengan ketakutan Owi terbang ke sebuah pohon. Ia bertengger sambil menenangkan diri.</p>
        <br />

<p> \n "Aduh, Han, aku hamper saja celaka. Untung kamu memanggilku. Terima kasih, ya!\” kata Owi. \“Kamu tidak ikut ibumu berburu?\”
        <br />

\n \“Tadi perutku agak sakit, tapi sekarang sudah sembuh. Kamu juga tidak berburu?\” Tanya Han.
        <br />

\n \“Tidak, aku mau tidur supaya besok pagi bisa main dengan Nuri dan Kutut!\” jawab Owi. \“Tetapi dari tadi aku tidak bisa tidur.\”
        <br />

\n \“Kita tidak mungkin bisa tidur malam, Wi! Kita, kan, burung malam. Siang hari tidur dan malam berburu. Kalau Nuri dan Kutut, siang mencari makan dan malam hari mereka tidur,\”
    ujar Han, \“Sudah ikut aku saja, yuk. Kita berlomba menangkap tikus atau katak. Setelah dapat, akan kubawa kau ke suatu tempat!\” </p>
        <br />

<p> \n Mereka lalu terbang dan masing-masing berhasil menangkap seekor katak. Han lalu mengajak Owi ke dalam hutan, menemui seekor burung hantu tua di hua lubang pohon.

\“Nenek, aku dan temanku Owi membawakan katak untukmu!\” kata Han.
        <br />

\n \“Kalian anak-anak yang baik. Terima kasih, ya, Owi, kamu cantik sekali!\” kata burung hantu tua itu.
        <br />

\n \“Aku selalu merasa diriku jelek. Burung hantu lain juga jelek!\” kata Owi.

\“Itu pikiran yang salah. Bagus dan jelek itu bukan tergantung pada ulu yang indah, atau suara yang bagus.
    Tetapi, apakah kamu punya hati baik atau tidak. Kamu membawakan makanan untuk burung tua yang lamban. Itu artinya kamu bagus, tidak jelek!\” kata burung tua itu.</p>
        <br />

<p> \n Owi merasa kata-kata burung tua itu benar. Ia dan Han lalu pergi berburu lagi. Mejelang subuh, mereka pulang dan tidur.

Ketika Owi terbangun, hari sudah petang lagi. Ia tidak bisa bermain dengan Kutut dan Nuri.
    Namun, Owi tidak sedih karena ia sudah tau bahwa ia bukan burung hantu yang jelek. Ia berjanji akan lebih rajin latihan berburu.</p></string>
    <string name="judul_pando">Pando Mencari Teman Berpetualang </string>
    <string name="little_match">The Little Match Girl</string>
    <string name="the_twelve">The Twelve Dancing Princesses</string>
    <string name="rumplestiltskin">Rumplestiltskin</string>
    <string name="the_elves">The Elves And The Shoemaker</string>
    <string name="hensel_and_gretel">Hensel And Gretel</string>
    <string name="the_snail">The Snail And The Rose-Tree</string>
    <string name="duck">The Ugly Duckling</string>
    <string name="little_pigs">Three Little Pigs</string>
    <string name="judul">Tulus Dan Ikhlas</string>
    <string name="judul2">Akibat Dari Perbuatan Menyekutukan Tuhan</string>
    <string name="judul3">Laki - laki Sederhana, Calon Penghuni surga</string>
    <string name="judul4">Canda Sang Sipenggembala Kepada Penduduk Desa</string>
    <string name="judul5">Kisah Si belang, Si botak Dan Si buta</string>
    <string name="judul6">Kisah Tukang Kebun Rajin Sedekah</string>
    <string name="judul7">Cerita Abu Nawas Berpura-pura Gila</string>
    <string name="judul8">Cerita Seorang Abu Nawas yang memenangkan lomba berburu dengan Abu Jahil.</string>
    <string name="judul9">Tipuan Abu Nawas kepada Tuan Tanah Yang Pelit dan Kikir</string>
    <string name="judul10">Abu Nawas dan Kisah Botol Ajaib</string>
</resources>